# synchronised-translator

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  app.py  requirements.txt
VAD/: VAD_processing.py
backend/: README.md  main.py  pyproject.toml
backend/src/: main.py  settings.py  stt_handlers.py  translator.py  translator_llm.py  translator_llm_v2.py  urls.py
frontend/: app.py
frontend/reference_audio/: current_reference_meta.json
simulstream/: README.md  demo.html  docker-compose.yml  example_client.py  server.py  ws_to_tcp_proxy.py
simulstream/app/: config.py  main.py  models.py  pipeline.py  session.py
speech-to-text/: .dockerignore  Dockerfile  packages.txt  pyproject.toml
speech-to-text/src/: VAD_processing.py  app.py  main-podlodka.py  main.py  parakeet_main.py
speech2text/: app.py
test-front/: front_stt.html  index.html
text-to-speech/: pyproject.toml  tts_front.html
text-to-speech/src/: __init__.py  main.py  settings.py
translator/: Dockerfile  VAD_processing.py  app.py  main.py  pyproject.toml  server.py  yandexgpt.py
translator/src/: main.py  yandexgpt.py
tts/: front.py  test.py  tts.py  tts_client.py  tts_client2.py  tts_front.html
